--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Save Your Tezos property</title>
+  <title>Tezos Game</title>
   <link rel="stylesheet" href="static/css/bootstrap.min.css">
   <script src="static/scripts/jquery.min.js"></script>
   <script src="static/scripts/popper.min.js"></script>
