--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,7 +115,7 @@
       <div id="contract-games-info"></div>
     </div>
     <br>
-    <div><h3>Projects:</h3>
+    <div><h3>Environmental organisations:</h3>
       <div id="contract-projects-info"></div>
     </div>
   </div>
